[gd_scene load_steps=6 format=3 uid="uid://73jm5qjy52vq"]

[ext_resource type="Script" uid="uid://d1wt4ma6055l8" path="res://dialogue/base_game_dialogue_balloon.gd" id="1_sjhsj"]
[ext_resource type="PackedScene" uid="uid://ckvgyvclnwggo" path="res://addons/dialogue_manager/dialogue_label.tscn" id="2_5sd0r"]
[ext_resource type="Theme" uid="uid://ddnfe7wolht6f" path="res://dialogue/dialogue_balloon_theme.tres" id="2_xkmgq"]
[ext_resource type="Script" uid="uid://bb52rsfwhkxbn" path="res://addons/dialogue_manager/dialogue_responses_menu.gd" id="3_xkmgq"]
[ext_resource type="FontFile" uid="uid://d0wedl3b4fwq0" path="res://Assets/font/PressStart2P-Regular.ttf" id="5_vwqec"]

[node name="GameDialogueBalloon" type="CanvasLayer"]
layer = 100
script = ExtResource("1_sjhsj")

[node name="Balloon" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_xkmgq")

[node name="Panel" type="Panel" parent="Balloon"]
clip_children = 2
custom_minimum_size = Vector2(400, 70)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -90.0
offset_right = 200.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 1

[node name="Dialogue" type="MarginContainer" parent="Balloon/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Balloon/Panel/Dialogue"]
layout_mode = 2

[node name="CharacterLabel" type="RichTextLabel" parent="Balloon/Panel/Dialogue/VBoxContainer"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.501961)
clip_contents = false
layout_mode = 2
mouse_filter = 1
theme_type_variation = &"CharacterNameText"
theme_override_constants/outline_size = 2
theme_override_constants/shadow_outline_size = 1
bbcode_enabled = true
text = "Character"
fit_content = true
scroll_active = false

[node name="DialogueLabel" parent="Balloon/Panel/Dialogue/VBoxContainer" instance=ExtResource("2_5sd0r")]
unique_name_in_owner = true
clip_contents = false
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"DialogueText"
theme_override_constants/outline_size = 2
theme_override_constants/shadow_outline_size = 0
theme_override_constants/line_separation = 2
text = "Dialogue... asdfjkaskldfjasl;dkfjal;sdjfal;skdfaskjdf;aslkjdfasl;kf"

[node name="Responses" type="MarginContainer" parent="Balloon"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -86.5
offset_top = -25.5
offset_right = 86.5
offset_bottom = 25.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="ResponsesMenu" type="VBoxContainer" parent="Balloon/Responses" node_paths=PackedStringArray("response_template")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 2
script = ExtResource("3_xkmgq")
response_template = NodePath("ResponseExample")

[node name="ResponseExample" type="Button" parent="Balloon/Responses/ResponsesMenu"]
layout_mode = 2
theme_override_constants/outline_size = 1
theme_override_constants/line_spacing = 5
theme_override_fonts/font = ExtResource("5_vwqec")
theme_override_font_sizes/font_size = 9
text = "Response example"
autowrap_mode = 3

[connection signal="gui_input" from="Balloon" to="." method="_on_balloon_gui_input"]
[connection signal="response_selected" from="Balloon/Responses/ResponsesMenu" to="." method="_on_responses_menu_response_selected"]
